@startuml
'https://plantuml.com/class-diagram

abstract class AbstractAircraft
{
	# int maxHp
    # int hp
    # ShootStrategy strategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + getMaxHp:int
    + setStrategy(ShootStrategy strategy):void
    + shoot():List<BaseBullet>
 }
class EliteEnemy {
    - int power
    - int direction
    - BloodPropFactory bloodPropFactory
    - BombPropFactory bombPropFactory
    - BulletPropFactory bulletPropFactory
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + genProp():AbstractProp
    + boom():void
}
class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + boom():void
}

class Boss {
    - int shootNum
    - int power
    - int direction
    - BloodPropFactory bloodPropFactory
    - BombPropFactory bombPropFactory
    - BulletPropFactory bulletPropFactory
    + Boss(int locationX, int locationY, int speedX, int speedY, int hp)
    + genProp():AbstractProp
    + shoot():List<BaseBullet>
}

interface produceEmeny{
    produceEnemy():AbstractAircraft
}

class MobEnemyFactory{
    + produceEnemy():AbstractAircraft
}

class EliteEnemyFactory{
    + produceEnemy():AbstractAircraft
}

class BossFactory{
    - int bossLevel
    - bossLevelUp():void
    - getBossLevel():int
    - setBossLevel():void
    + produceEnemy():AbstractAircraft
}

AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- Boss

produceEmeny <|.. MobEnemyFactory
produceEmeny <|.. EliteEnemyFactory
produceEmeny <|.. BossFactory

MobEnemy <.. MobEnemyFactory : produce
EliteEnemy <.. EliteEnemyFactory : produce
Boss <.. BossFactory :produce

@enduml